--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "essentials",
   "version": "1.0.0",
-  "description": "",
+  "description": "An online web-app commemorating my favourite ongoing web novel, [Pale](https://palewebserial.wordpress.com/)!",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npx serve ."
   },
   "author": "",
   "license": "ISC",
